Remove extra tabs
Use mmalloc to pre-allocate memory region for metric sets.

OVIS/lib is assumed to be installed.

Change-Id: Iad563f318c5802ed37f74bde38fdefb7a6c75e5d

--- a/ldms/Makefile.am
+++ b/ldms/Makefile.am
@@ -222,7 +222,7 @@ lib_LTLIBRARIES = src/libldms.la $(SOCK_la) \
 
 src_libldms_la_SOURCES = src/ldms.c src/ldms_sock.c src/ldms_xprt.c \
 		src/ogc_rbt.c
-src_libldms_la_LIBADD = -ldl -lpthread -levent -levent_pthreads
+src_libldms_la_LIBADD = -ldl -lpthread -levent -levent_pthreads -lmmalloc
 src_libldms_la_DEPENDENCIES = $(srcdir)/src/libldms.map
 
 libldmsincludedir = $(includedir)/ldms
