ldms-utils.spec.in -> ldms.spec.in
Rename the SPEC file to properly reflect the project name.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -149,6 +149,6 @@ AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile src/xprt/Makefile
 		 src/store/Makefile src/sampler/Makefile
 		 src/sampler/lustre/Makefile
 		 src/ldmsd/Makefile
-		 ldms-utils.spec])
+		 ldms.spec])
 AC_OUTPUT
 
