Add header files to SOURCES for distribution.
Header files are added to _SOURCES in Makefile.am's so that they will be
included for source distribution. The source distribution is made by "make
dist-gzip", which results in a zipped tar ball "ldms-VERSION.tar.gz".

--- a/ldms/src/core/Makefile.am
+++ b/ldms/src/core/Makefile.am
@@ -9,7 +9,7 @@ AM_CFLAGS = -Wall $(DBGFLAGS)
 ldmscoreincludedir = $(includedir)/ldms
 ldmscoreinclude_HEADERS = ldms.h ldmsd.h ldms_xprt.h ogc_rbt.h
 
-libldms_la_SOURCES = ldms.c ldms_xprt.c ogc_rbt.c
+libldms_la_SOURCES = ldms.c ldms_xprt.c ogc_rbt.c ldms_private.h
 libldms_la_CFLAGS = -I$(OVIS_LIB_INCDIR)
 libldms_la_LIBADD = -ldl -lpthread -L$(OVIS_LIB_LIBDIR) -lmmalloc
 lib_LTLIBRARIES += libldms.la
