--- a/ldms/src/xprt/Makefile.am
+++ b/ldms/src/xprt/Makefile.am
@@ -5,12 +5,12 @@ INCLUDES = -I$(srcdir)/$(CORE)
 AM_CFLAGS = $(INCLUDES)
 
 if ENABLE_SOCK
-libldmssock_la_SOURCES = ldms_sock.c
+libldmssock_la_SOURCES = ldms_sock.c ldms_sock_xprt.h
 lib_LTLIBRARIES += libldmssock.la
 endif
 
 if ENABLE_RDMA
-libldmsrdma_la_SOURCES = ldms_rdma.c
+libldmsrdma_la_SOURCES = ldms_rdma.c ldms_rdma_xprt.h
 libldmsrdma_la_LIBADD = -libverbs -lrdmacm
 lib_LTLIBRARIES += libldmsrdma.la
 endif
@@ -22,7 +22,7 @@ UGNI_CFLAGS = $(shell pkg-config --cflags cray-ugni)
 UGNI_LIBS = $(shell pkg-config --libs cray-ugni)
 libldmsugni_la_CFLAGS = $(AM_CFLGAS) $(PMI_CFLAGS) $(UGNI_CFLAGS)
 libldmsugni_la_LDFLAGS = $(PMI_LIBS) $(UGNI_LIBS)
-libldmsugni_la_SOURCES = ldms_ugni.c
+libldmsugni_la_SOURCES = ldms_ugni.c ldms_ugni.h
 lib_LTLIBRARIES += libldmsugni.la
 endif
 
